--- a/nodejs-app/Jenkinsfile.template
+++ b/nodejs-app/Jenkinsfile.template
@@ -1,5 +1,6 @@
 pipeline {
-agent { label 'nodejs-app' }  options { 
+agent { label 'nodejs-app' }
+options { 
     buildDiscarder(logRotator(numToKeepStr: '2'))
   }
   stages {
