--- a/nodejs-app/Jenkinsfile.template
+++ b/nodejs-app/Jenkinsfile.template
@@ -1,10 +1,11 @@
 pipeline {
-agent { label 'nodejs-app' }
-options { 
+  agent none
+  options { 
     buildDiscarder(logRotator(numToKeepStr: '2'))
   }
   stages {
-stage('Test') {
+    stage('Test') {
+      agent { label 'nodejs-app' }
       steps {
         container('nodejs') {
           echo 'Hello World!'   
@@ -12,7 +13,7 @@ stage('Test') {
         }
       }
     }
-  stage('Build and Push Image') {
+    stage('Build and Push Image') {
       when {
          beforeAgent true
          branch 'master'
