--- a/nodejs-app/Jenkinsfile.template
+++ b/nodejs-app/Jenkinsfile.template
@@ -21,5 +21,17 @@ stage('Test') {
          echo "TODO - build and push image"
       }
     }
+    stage('Deploy') {
+      when {
+        beforeAgent true
+        branch 'master'
+      }
+      input {
+        message "Should we continue?"
+      }
+      steps {
+        echo "Continuing with deployment"
+      }
+    }
   }
 }
