--- a/nodejs-app/Jenkinsfile.template
+++ b/nodejs-app/Jenkinsfile.template
@@ -26,6 +26,9 @@ stage('Test') {
         beforeAgent true
         branch 'master'
       }
+      options {
+        timeout(time: 10, unit: 'SECONDS') 
+      }
       input {
         message "Should we continue?"
       }
