--- a/nodejs-app/Jenkinsfile.template
+++ b/nodejs-app/Jenkinsfile.template
@@ -33,7 +33,8 @@ stage('Test') {
         message "Should we deploy?"
         submitter "432675"
         submitterParameter "APPROVER"
-      }      input {
+      }
+      input {
         message "Should we continue?"
       }
       steps {
