--- a/nodejs-app/Jenkinsfile.template
+++ b/nodejs-app/Jenkinsfile.template
@@ -2,7 +2,11 @@ pipeline {
 agent { label 'nodejs-app' }
 options { 
     buildDiscarder(logRotator(numToKeepStr: '2'))
-  }
+}
+post {
+    aborted {
+      echo "Why didn't you push my button?"
+    }
   stages {
 stage('Test') {
       steps {
