--- a/nodejs-app/Jenkinsfile.template
+++ b/nodejs-app/Jenkinsfile.template
@@ -17,8 +17,14 @@ stage('Test') {
             sh 'node --version'
         }
       }
+      post {
+        success {
+          stash name: 'app', includes: '*.js, public/**, views/*, Dockerfile'
+        }
+      }
     }
   stage('Build and Push Image') {
+      agent any
       when {
          beforeAgent true
          branch 'master'
@@ -26,10 +32,9 @@ stage('Test') {
       steps {
          echo "TODO - build and push image"
       }
-      post {
-        success {
-          stash name: 'app', includes: '*.js, public/**, views/*, Dockerfile'
-        }
+      steps {
+        echo "TODO - build and push image"
+        unstash 'app'
       }
     }
     stage('Deploy') {
