--- a/nodejs-app/Jenkinsfile.template
+++ b/nodejs-app/Jenkinsfile.template
@@ -1,32 +1,37 @@
 pipeline {
-agent { label 'nodejs-app' }
-options { 
+  agent none
+  options { 
     buildDiscarder(logRotator(numToKeepStr: '2'))
     skipDefaultCheckout true
-}
-post {
-    aborted {
-      echo "Why didn't you push my button?"
-    }
   }
   stages {
-stage('Test') {
+    stage('Test') {
+      agent { label 'nodejs-app' }
       steps {
+        checkout scm
         container('nodejs') {
           echo 'Hello World!'   
-            sh 'node --version'
+          sh 'node --version'
+        }
+        post {
+          success {
+            stash name: 'app', includes: '*.js, public/**, views/*, Dockerfile'
+          }
         }
       }
-    } 
-  stage('Build and Push Image') {
-      agent any
+    }
+    stage('Build and Push Image') {
       when {
          beforeAgent true
          branch 'master'
       }
       steps {
-        echo "TODO - build and push image"
-        unstash 'app'
+         echo "TODO - build and push image"
+      }
+      post {
+        success {
+          slackSend "${JOB_NAME} pipeline job is awaiting approval at: ${RUN_DISPLAY_URL}"
+        }
       }
     }
     stage('Deploy') {
@@ -35,20 +40,15 @@ stage('Test') {
         branch 'master'
       }
       options {
-        timeout(time: 10, unit: 'SECONDS') 
+        timeout(time: 60, unit: 'SECONDS') 
       }
       input {
         message "Should we deploy?"
         submitterParameter "APPROVER"
       }
       steps {
-        echo "Continuing with deployment"
+        echo "Continuing with deployment - approved by ${APPROVER}"
       }
-      post {
-        success {
-          slackSend "${JOB_NAME} pipeline job is awaiting approval at: ${RUN_DISPLAY_URL}"
-        }
-      }
-    }
+    }   
   }
 }
